View cached links as text
If an HTTP response has a status of 304 Not Modified, rewriting the
Content-Type has no effect: Firefox just uses the cached Content-Type.
The solution is to clear the cache first, or, if that is not possible,
to modify the URL to make it unique.

--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,7 @@
     },
     "permissions": [
         "<all_urls>",
+        "browsingData",
         "contextMenus",
         "webRequest",
         "webRequestBlocking"
